rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_best_rword-2.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
[
    WordMatch {
        query: MatchSide {
            ix: 0,
            len: 3,
            slice: (
                0,
                3,
            ),
            function: true,
        },
        record: MatchSide {
            ix: 1,
            len: 5,
            slice: (
                0,
                3,
            ),
            function: false,
        },
        typos: 0.0,
        fin: false,
    },
]
