rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_best_rword_nonfunc.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
(
    [
        WordMatch {
            ix: 1,
            len: 5,
            slice: (
                0,
                3,
            ),
            typos: 0.0,
            func: false,
            fin: false,
        },
    ],
    [
        WordMatch {
            ix: 0,
            len: 3,
            slice: (
                0,
                3,
            ),
            typos: 0.0,
            func: true,
            fin: false,
        },
    ],
)
