rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_best_rword_typos.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
(
    [
        WordMatch {
            offset: 1,
            slice: (
                8,
                10,
            ),
            subslice: (
                0,
                2,
            ),
            typos: 0.0,
            func: true,
            fin: true,
        },
    ],
    [
        WordMatch {
            offset: 0,
            slice: (
                0,
                2,
            ),
            subslice: (
                0,
                2,
            ),
            typos: 0.0,
            func: true,
            fin: true,
        },
    ],
)
