rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_empty_one-2.snap
---
source: src/matching/text.rs
expression: "text_match(&qtext.to_ref(), &rtext.to_ref())"
---
(
    [],
    [],
)
