rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_empty_one.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
(
    [],
    [],
)
