rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_intersection.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
(
    [
        WordMatch {
            ix: 1,
            len: 6,
            slice: (
                0,
                5,
            ),
            typos: 0.5,
            func: false,
            fin: false,
        },
        WordMatch {
            ix: 3,
            len: 7,
            slice: (
                0,
                7,
            ),
            typos: 0.5,
            func: false,
            fin: true,
        },
    ],
    [
        WordMatch {
            ix: 1,
            len: 7,
            slice: (
                0,
                7,
            ),
            typos: 0.5,
            func: false,
            fin: true,
        },
        WordMatch {
            ix: 2,
            len: 4,
            slice: (
                0,
                4,
            ),
            typos: 0.5,
            func: false,
            fin: false,
        },
    ],
)
