rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_joined_query.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
[
    WordMatch {
        query: MatchSide {
            ix: 0,
            len: 2,
            slice: (
                0,
                2,
            ),
            primary: true,
        },
        record: MatchSide {
            ix: 0,
            len: 4,
            slice: (
                0,
                4,
            ),
            primary: true,
        },
        typos: 1,
        fin: true,
    },
    WordMatch {
        query: MatchSide {
            ix: 1,
            len: 2,
            slice: (
                0,
                2,
            ),
            primary: true,
        },
        record: MatchSide {
            ix: 0,
            len: 4,
            slice: (
                0,
                4,
            ),
            primary: true,
        },
        typos: 0,
        fin: true,
    },
    WordMatch {
        query: MatchSide {
            ix: 2,
            len: 6,
            slice: (
                0,
                6,
            ),
            primary: true,
        },
        record: MatchSide {
            ix: 1,
            len: 6,
            slice: (
                0,
                6,
            ),
            primary: true,
        },
        typos: 0,
        fin: true,
    },
]
