rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_joined_query_short.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
(
    [
        WordMatch {
            offset: 0,
            slice: (
                0,
                1,
            ),
            subslice: (
                0,
                1,
            ),
            typos: 0.1,
            func: false,
            fin: true,
        },
        WordMatch {
            offset: 1,
            slice: (
                2,
                7,
            ),
            subslice: (
                0,
                2,
            ),
            typos: 0.4,
            func: false,
            fin: false,
        },
    ],
    [
        WordMatch {
            offset: 0,
            slice: (
                0,
                3,
            ),
            subslice: (
                0,
                3,
            ),
            typos: 0.5,
            func: false,
            fin: false,
        },
    ],
)
