rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_joined_query_typos.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
[
    WordMatch {
        query: MatchSide {
            ix: 0,
            len: 4,
            slice: (
                0,
                4,
            ),
            function: false,
        },
        record: MatchSide {
            ix: 0,
            len: 12,
            slice: (
                0,
                12,
            ),
            function: false,
        },
        typos: 1,
        fin: true,
    },
    WordMatch {
        query: MatchSide {
            ix: 1,
            len: 7,
            slice: (
                0,
                7,
            ),
            function: false,
        },
        record: MatchSide {
            ix: 0,
            len: 12,
            slice: (
                0,
                12,
            ),
            function: false,
        },
        typos: 2,
        fin: true,
    },
]
