rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_joined_query_unfihished.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
[
    WordMatch {
        query: MatchSide {
            ix: 0,
            len: 5,
            slice: (
                0,
                5,
            ),
            primary: true,
        },
        record: MatchSide {
            ix: 0,
            len: 12,
            slice: (
                0,
                8,
            ),
            primary: true,
        },
        typos: 1,
        fin: true,
    },
    WordMatch {
        query: MatchSide {
            ix: 1,
            len: 3,
            slice: (
                0,
                3,
            ),
            primary: true,
        },
        record: MatchSide {
            ix: 0,
            len: 12,
            slice: (
                0,
                8,
            ),
            primary: true,
        },
        typos: 0,
        fin: false,
    },
]
